--- a/Notaria virtual index.html
+++ b/Notaria virtual index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notaría Virtual - Servicios</title>
+  <title>Notaría Virtual Legal Net- Servicios</title>
   <style>
     body {
       font-family: Arial, sans-serif;
